--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
     "react-scroll-horizontal": "^1.6.6",
+    "react-smooth-scroll-hook": "^1.3.4",
     "react-typed": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
